clusters/homelab/apps/devops-tools/harbor/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-route
  namespace: devops-tools
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-gateway
  hostnames:
    - harbor.michaelhomelab.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor
          port: 80
